// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with /materials/:id/reviews route renders correctly 1`] = `
<div>
  renderList
</div>
`;

exports[`with /materials/:id/reviews/new route renders correctly 1`] = `
<div>
  renderNew
</div>
`;
